<resources>
    <string name="app_name">Drug Reduction Force</string>
    <string name="app_name_short">Dre Force</string>

    <string name="title_activity_leaderboard">High Scores</string>
    <string name="title_activity_game_map">Action Map</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="ui_return">Return</string>

    <!-- QuitDialogFragment.java -->
    <string name="dialog_quit_title">Quit?! Pft.</string>
    <string name="dialog_quit_message">Do you wish to save before quitting? All unsaved progress would be lost.</string>


    <string name="dialog_proceed_game_over">Do you wish to add your score to the leaderboards?</string>
    <!-- NewGameDialogFragment -->

    <!-- GameMapActivity Shop -->
    <string name="shop">Shop</string>
    <string name="shop_title">Tindahan ni Aling Nena</string>
    <string name="shop_name">Name</string>
    <string name="shop_icon">Icon</string>
    <string name="shop_buy">Buy</string>
    <string name="shop_cost">Cost</string>
    <string name="shop_money">Money: </string>

    <string name="shop_purchase">Purchase</string>
    <string name="shop_purchase_positive">Yes</string>
    <string name="shop_purchase_negative">No</string>
    <string name="shop_purchase_neutral">I\'ll think about it</string>


    <!-- Generic values -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="equipment">Equipment</string>
    <string name="name">Name</string>
    <string name="proceed">Proceed</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="quit">Quit</string>
    <string name="received">Received</string>
    <string name="player_status">Player Status</string>
    <string name="total_money">Total Money</string>
    <string name="total_score">Total Score</string>
    <string name="money">Money</string>
    <string name="score">Score</string>
    <string name="final_score">Final Score</string>

    <!-- CreatePlayerActivity -->
    <string name="create_player_enter_name">Enter your name</string>
    <string name="create_player_empty_name">Name cannot be empty</string>
    <!-- GUN names -->
    <string name="gun_pistol_name">Water Gun</string>
    <string name="gun_pistol_description">A basic reliant weapon that requires alot of tapping</string>

    <string name="gun_rifle_name">Semi-automatic Rifle</string>
    <string name="gun_rifle_description">A more automated kind of weapon, which requires less tapping</string>

    <string name="gun_shotgun_name">Shotgun</string>
    <string name="gun_shotgun_description">A slow but powerful area-of-effect weapon that spreads pellets within a radius and each pellet deals area-of-effect damage</string>

    <string name="gun_sniper_name">Sniper</string>
    <string name="gun_sniper_description">A high damage weapon</string>

    <string name="gun_rocket_name">Rocket Launcher</string>
    <string name="gun_rocket_description">A high damage area-of-effect weapon :D</string>

    <string name="game_result_success">Success!</string>
    <string name="game_result_subtitle">All drugs have been eliminated.</string>
</resources>
