<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_game_result"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:paddingTop="@dimen/activity_horizontal_margin"
    tools:context="dlsu.wirtec.tokhangapp.activities.GameResultActivity"
    android:background="@drawable/background_game_result">

    <TextView
        android:id="@+id/tv_success"
        android:text="@string/game_result_success"
        android:textSize="42sp"
        android:textColor="#dfd043"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_name"
        android:text="name"
        android:textColor="#2aaebe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_subtitle"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/tv_subtitle"
        android:text="@string/game_result_subtitle"
        android:textSize="20sp"
        android:textColor="@color/silan_blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_success"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/tv_received"
        android:text="@string/received"
        android:textSize="20sp"
        android:textColor="@color/silan_blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_name"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/tv_cash"
        android:text="@string/money"
        android:textColor="#2aaebe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_received"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btn_return"
        android:text="Back to Action Map"
        android:textColor="@color/silan_blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/tv_totalMoney"
        android:text="@string/total_money"
        android:textColor="#2aaebe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_status"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/tv_totalAdditionMoney"
        android:textColor="#31e137"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tv_totalMoney"
        android:layout_alignBottom="@+id/tv_totalMoney"
        android:layout_toEndOf="@+id/tv_totalMoney" />

    <TextView
        android:id="@+id/tv_totalScoreAdditional"
        android:textColor="#31e137"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/tv_totalScore"
        android:layout_toEndOf="@+id/tv_totalScore" />

    <TextView
        android:id="@+id/tv_totalScore"
        android:text="@string/total_score"
        android:textColor="#2aaebe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_totalMoney"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/tv_score"
        android:text="@string/score"
        android:textColor="#2aaebe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_cash"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/tv_status"
        android:text="@string/player_status"
        android:textSize="20sp"
        android:textColor="@color/silan_blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_score"
        android:layout_alignParentStart="true" />


</RelativeLayout>
