<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_player"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dlsu.wirtec.tokhangapp.activities.CreatePlayerActivity"
    android:background="@drawable/background_create_player">

    <EditText
        android:id="@+id/et_name"
        android:textColor="@color/silan_blue"
        android:textColorHint="@color/silan_blue"
        android:textSize="28sp"
        android:hint="@string/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btn_proceed"
        android:text="@string/proceed"
        android:textColor="@color/silan_blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:background="@color/transparent" />

    <TextView
        android:id="@+id/tv_enterName"
        android:textColor="@color/silan_blue"
        android:text="@string/create_player_enter_name"
        android:textSize="32sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/et_name"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btn_cancel"
        android:text="@string/cancel"
        android:textColor="@color/silan_blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@color/transparent" />
</RelativeLayout>
