<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="dlsu.wirtec.tokhangapp.activities.NodeActivity"
    android:background="@drawable/background_node"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_shop"
        android:text="@string/shop"
        android:textColor="@color/silan_blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:layout_above="@+id/btn_equipment"
        android:layout_alignParentStart="true"
        android:layout_marginStart="12dp" />

    <Button
        android:id="@+id/btn_equipment"
        android:text="@string/equipment"
        android:textColor="@color/silan_blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/btn_shop" />

    <Button
        android:id="@+id/btn_quit"
        android:text="@string/quit"
        android:textColor="@color/silan_blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/btn_save"
        android:text="@string/save"
        android:textColor="@color/silan_blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:layout_below="@+id/btn_quit"
        android:layout_alignParentEnd="true" />

    <ImageButton
        android:id="@+id/btn_stage_2"
        android:layout_width="@dimen/node_diameter"
        android:layout_height="@dimen/node_diameter"
        android:scaleType="fitXY"
        android:background="@color/transparent"
        android:layout_marginStart="31dp"
        android:layout_above="@+id/btn_shop"
        android:layout_toEndOf="@+id/btn_shop" />

    <ImageButton
        android:id="@+id/btn_stage_3"
        android:layout_width="@dimen/node_diameter"
        android:layout_height="@dimen/node_diameter"
        android:scaleType="fitXY"
        android:background="@color/transparent"
        android:layout_marginStart="104dp"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/btn_stage_2" />

    <ImageButton
        android:id="@+id/btn_stage_4"
        android:layout_width="@dimen/node_diameter"
        android:layout_height="@dimen/node_diameter"
        android:scaleType="fitXY"
        android:background="@color/transparent"
        android:layout_marginStart="42dp"
        android:layout_marginTop="22dp"
        android:layout_below="@+id/btn_stage_3"
        android:layout_toEndOf="@+id/btn_stage_3" />

    <ImageButton
        android:id="@+id/btn_stage_5"
        android:layout_width="@dimen/node_diameter"
        android:layout_height="@dimen/node_diameter"
        android:scaleType="fitXY"
        android:background="@color/transparent"
        android:layout_alignTop="@+id/btn_stage_2"
        android:layout_toStartOf="@+id/btn_save"
        android:layout_marginEnd="35dp" />

    <ImageButton
        android:id="@+id/btn_stage_6"
        android:layout_width="@dimen/node_diameter"
        android:layout_height="@dimen/node_diameter"
        android:scaleType="fitXY"
        android:background="@color/transparent"
        android:layout_below="@+id/btn_stage_4"
        android:layout_alignStart="@+id/btn_save" />

    <ImageButton
        android:id="@+id/btn_stage_1"
        android:layout_width="@dimen/node_diameter"
        android:layout_height="@dimen/node_diameter"
        android:scaleType="fitXY"
        android:background="@color/transparent"
        android:layout_below="@+id/btn_save"
        android:layout_toStartOf="@+id/btn_stage_2"
        android:layout_marginEnd="10dp" />

        <ImageView
            android:id="@+id/iv_drawArea"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

</RelativeLayout>